--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,8 @@
 	width: 100%;
 	position: relative;
 	height: 20vw;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	z-index: 99;
 	background-color: #162034;
 	padding: 1vw;
@@ -11,10 +12,14 @@
 	position: relative;
 }
 .footer-grid{
+	display: -ms-grid;
 	display: grid;
-	grid-template-columns: 25% 25% 25%
+	-ms-grid-template-columns: 25% 25% 25%
 	25%	;
-	grid-template-rows: auto;
+	    grid-template-columns: 25% 25% 25%
+	25%	;
+	-ms-grid-template-rows: auto;
+	    grid-template-rows: auto;
 	height: auto;
 	grid-gap: 1vw;
 	width: 80%;
