--- a/css/media.css
+++ b/css/media.css
@@ -3,9 +3,21 @@
 		height:500px;
 		position: fixed;
 		top:-450px;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: column;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-transition: 1s;
+		-o-transition: 1s;
 		transition: 1s;
 	}
 	.logo{
@@ -16,9 +28,21 @@
 		position: fixed;
 		top:-450px;
 		background-color: #007aff;
+		display: -webkit-box;
+		display: -webkit-flex;
+		display: -ms-flexbox;
 		display: flex;
-		flex-direction: column;
-		align-items: center;
+		-webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+		-webkit-flex-direction: column;
+		    -ms-flex-direction: column;
+		        flex-direction: column;
+		-webkit-box-align: center;
+		-webkit-align-items: center;
+		    -ms-flex-align: center;
+		        align-items: center;
+		-webkit-transition: 1s;
+		-o-transition: 1s;
 		transition: 1s;
 	}
 	.fixed{
@@ -33,27 +57,41 @@
 		margin-top:3px;
 	}
 	#check:checked ~ .header{
-		transform: translateY(450px);
+		-webkit-transform: translateY(450px);
+		    -ms-transform: translateY(450px);
+		        transform: translateY(450px);
 		background-color: white;
 	}
 	#check:checked ~ .header2{
-		transform: translateY(450px);
+		-webkit-transform: translateY(450px);
+		    -ms-transform: translateY(450px);
+		        transform: translateY(450px);
 		background-color: white;
 	}
 	#check:checked ~  .burger .icon-burger:before{
 		display: none;
+		-webkit-transition: 1s;
+		-o-transition: 1s;
 		transition: 1s;
 	}
 	#check:checked ~  .burger .icon-burger:after{
 		top:2px;
 		left: 1px;
+		-webkit-transition: 1s;
+		-o-transition: 1s;
 		transition: 1s;
-		transform: rotateZ(90deg);	
+		-webkit-transform: rotateZ(90deg);
+		    -ms-transform: rotate(90deg);
+		        transform: rotateZ(90deg);	
 	}
 	#check:checked ~  .burger .icon-burger{
 		top:11px;
 		left: 5px;
-		transform: rotateZ(45deg);
+		-webkit-transform: rotateZ(45deg);
+		    -ms-transform: rotate(45deg);
+		        transform: rotateZ(45deg);
+		-webkit-transition: 1s;
+		-o-transition: 1s;
 		transition: 1s;
 	}
 	#check:checked ~ .logo-title{
@@ -77,9 +115,12 @@
 	}
 	.navbar{
 		margin-top: 50px;
+		display: -ms-grid;
 		display: grid;
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
+		-ms-grid-template-columns: 1fr;
+		    grid-template-columns: 1fr;
+		-ms-grid-template-rows: auto;
+		    grid-template-rows: auto;
 		height: 70%;
 	}
 	.nav-link{
@@ -89,15 +130,18 @@
 		display: block;
 	}
 	.grid-container{
-		grid-template-columns: 1fr;
+		-ms-grid-template-columns: 99%;
+		    grid-template-columns: 99%;
 	}
 	.card{
 		border: 1px solid gray;
+		width: 100%;
 	}
 	.card-img{
 		width: 100%;
 		height: 250px;
-		border-radius: 1vw;
+		-webkit-border-radius: 1vw;
+		        border-radius: 1vw;
 		margin:1vw auto;
 		border-bottom:  1px solid gray;	
 	}
@@ -137,7 +181,8 @@
 		clear: both;
 	}
 	.footer-grid{
-		grid-template-columns: 1fr;
+		-ms-grid-template-columns: 1fr;
+		    grid-template-columns: 1fr;
 		grid-gap: 0vw;
 		grid-row-gap: 20px;
 		font-size: 15px!important;
@@ -172,7 +217,7 @@
 	}
 	.g-button{
 		height: 100%;
-		font-size: 15px;
+		font-size: 16px;
 	}
 	.filter{
 		height: 30px;
@@ -199,7 +244,8 @@
 	}
 	
 	.grid-inst{
-		grid-template-columns:1fr;
+		-ms-grid-template-columns:1fr;
+		    grid-template-columns:1fr;
 		width: 100%;
 		height: auto;
 	}
@@ -234,7 +280,8 @@
 		width: 100%;
 	}
 	.profile{
-		grid-template-columns: 1fr;
+		-ms-grid-template-columns: 1fr;
+		    grid-template-columns: 1fr;
 		width: 95%;
 		font-size: 20px;
 	}
@@ -297,8 +344,10 @@
 /*---------------edu.php----------------------*/
 	.courses{
 		width: 100%;
-		grid-template-columns: 1fr;
-		grid-template-rows: auto;
+		-ms-grid-template-columns: 1fr;
+		    grid-template-columns: 1fr;
+		-ms-grid-template-rows: auto;
+		    grid-template-rows: auto;
 		grid-gap: 2%;
 	}
 	.course{
@@ -316,14 +365,20 @@
 		padding: 5px;
 	}
 	.course:hover .c-title{
+	 	-webkit-transition: 1s;
+	 	-o-transition: 1s;
 	 	transition: 1s;
 	 	font-size: 20px;
 	}
 	.course:hover .paid{
+	 	-webkit-transition: 1s;
+	 	-o-transition: 1s;
 	 	transition: 1s;
 	 	font-size: 20px;
 	}
 	.course:hover .free{
+	 	-webkit-transition: 1s;
+	 	-o-transition: 1s;
 	 	transition: 1s;
 	 	font-size: 20px;
 	}
@@ -345,8 +400,10 @@
 	}
 /*-----------------driver------------------------------*/
 	.d-profile{
+		display: -ms-grid;
 		display: grid;
-		grid-template-columns: 100%;
+		-ms-grid-template-columns: 100%;
+		    grid-template-columns: 100%;
 		height: auto;
 	}
 	.d-left{
@@ -373,7 +430,8 @@
 	}
 	
 	.d-personal{
-		grid-template-columns: 49% 49%;
+		-ms-grid-template-columns: 49% 49%;
+		    grid-template-columns: 49% 49%;
 		height: auto;
 		margin-left: 0%;
 		border-left: 0px solid silver!important;
@@ -396,6 +454,10 @@
 		color: #007aff;
 	}
 	.podrobno-info{
+		font-size: 16px;
+		margin-top: 10px;
+	}
+	.podrobno-info div{
 		font-size: 16px;
 		margin-top: 10px;
 	}
@@ -448,11 +510,13 @@
 	}
 /*--------profile--------------------------------*/
 	.u-profile{
-		grid-template-columns: 99%;
+		-ms-grid-template-columns: 99%;
+		    grid-template-columns: 99%;
 		height: auto;
 	}
 	.p-card{
-		grid-template-columns: 99%;
+		-ms-grid-template-columns: 99%;
+		    grid-template-columns: 99%;
 		height: auto;
 		color: #007aff;
 	}
@@ -467,9 +531,11 @@
 	}
 	.p-active{
 		height: 300px;
+		font-size: 14px;
 	}
 	.p-dis{
 		height: 300px;
+		font-size: 14px;
 	}
 	.p-inst-active{
 		height: 30px;
@@ -477,7 +543,7 @@
 		margin-bottom: 5px;
 	}
 	.pia-down{
-		font-size: 20px;
+		font-size: 25px;
 	}
 	.p-inst-dis{
 		height: 30px;
@@ -494,6 +560,12 @@
 	}
 	.p-label{
 		font-size: 14px;
+	}
+	.p-info{
+		font-size: 15px;
+	}
+	.p-personal div{
+		font-size: 15px;
 	}
 	/*--------test.php--------------------------------*/
 	.test{
@@ -514,12 +586,14 @@
 		font-size: 23px;
 	}
 	.t-pics{
+		display: -ms-grid;
 		display: grid;
 		grid-gap: 10px;
 		margin: 1vw 0;
 		width: 90%;
 		height: 90%;
-		grid-template-columns: 1fr;
+		-ms-grid-template-columns: 1fr;
+		    grid-template-columns: 1fr;
 	}
 	.t-pic{
 		width: 300px;
@@ -591,7 +665,9 @@
 		position: absolute;
 		top:50%;
 		left: 50%;
-		transform:translate(-50%,-50%);
+		-webkit-transform:translate(-50%,-50%);
+		    -ms-transform:translate(-50%,-50%);
+		        transform:translate(-50%,-50%);
 	}
 
 	.in-submit:hover,.up-submit:hover{
