--- a/css/v-l.css
+++ b/css/v-l.css
@@ -2,7 +2,8 @@
 	background-color: lightgray;
 	height: auto;
 	width: 100%;
-	box-shadow: 0 0 1vw gray;
+	-webkit-box-shadow: 0 0 1vw gray;
+	        box-shadow: 0 0 1vw gray;
 	padding-bottom: 5vw;
 }
 .v-l-title{
@@ -26,5 +27,6 @@
 	padding: 0.5vw;
 	float: right;
 	text-align: center;
-	border-radius: 0.5vw;
+	-webkit-border-radius: 0.5vw;
+	        border-radius: 0.5vw;
 }
