--- a/css/driver.css
+++ b/css/driver.css
@@ -1,6 +1,8 @@
 .d-profile{
+	display: -ms-grid;
 	display: grid;
-	grid-template-columns: 30% 70%;
+	-ms-grid-template-columns: 30% 70%;
+	    grid-template-columns: 30% 70%;
 	height: 30vw;
 	width: 100%;
 	position: relative;
@@ -8,7 +10,8 @@
 }
 .d-right{
 	background-color: white;
-	box-shadow: 0 0 1vw gray;
+	-webkit-box-shadow: 0 0 1vw gray;
+	        box-shadow: 0 0 1vw gray;
 }
 .d-title{
 	padding: 1.5%;
@@ -19,7 +22,8 @@
 	background-color: rgb(0,0,0,0);
 	color: #2C84C0;
 	border-bottom: 0.1vw solid #2C84C0;
-	border-radius: 0 0 1vw 0;
+	-webkit-border-radius: 0 0 1vw 0;
+	        border-radius: 0 0 1vw 0;
 }
 .d-card{
 	width: 91%;
@@ -27,14 +31,17 @@
 	margin-top: 3%;
 }
 .d-personal{
+	display: -ms-grid;
 	display: grid;
-	grid-template-columns: 20% 25% 25% 30%;
+	-ms-grid-template-columns: 20% 25% 25% 30%;
+	    grid-template-columns: 20% 25% 25% 30%;
 	width: 100%;
 	position: relative;
 	background-color: #F7F7F7;
 	border-left: 0.3vw solid #2C84C0;
 	margin-left: 5%;
-	border-radius: 0.3vw;
+	-webkit-border-radius: 0.3vw;
+	        border-radius: 0.3vw;
 }
 
 .d-info{
@@ -46,7 +53,8 @@
 
 .d-left{
 	background-color: #162034;
-	box-shadow: 0 0 1vw gray;
+	-webkit-box-shadow: 0 0 1vw gray;
+	        box-shadow: 0 0 1vw gray;
 }
 .d-ph{
 	height: 35vw;
@@ -75,11 +83,16 @@
 	margin:1vw auto;
 	padding: 0.5vw;
 	width: 98%;
-	border-radius: 0.5vw;
+	-webkit-border-radius: 0.5vw;
+	        border-radius: 0.5vw;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
 	min-height: 5vw;
+	display: -ms-grid;
 	display: grid;
-	grid-template-rows: 10% 90%;
+	-ms-grid-template-rows: 10% 90%;
+	    grid-template-rows: 10% 90%;
 }
 .d-ph-name{
 	position: relative;
@@ -94,7 +107,8 @@
 	background-color: #F7F7F7;
 	border-left: 0.3vw solid #2C84C0;
 	margin-left: 5%;
-	border-radius: 0.3vw;
+	-webkit-border-radius: 0.3vw;
+	        border-radius: 0.3vw;
 	padding: 1%;
 	margin-top: 5%;
 	height: auto;
@@ -112,7 +126,8 @@
 .d-edit{
 	width: 90%;
 	padding:0.2vw;
-	border-radius: 0.2vw;
+	-webkit-border-radius: 0.2vw;
+	        border-radius: 0.2vw;
 	border: 0.1vw solid silver;	
 }
 .add{
