--- a/css/edu.css
+++ b/css/edu.css
@@ -4,7 +4,8 @@
 }
 .e-choise{
 	margin:1vw;
-	border-radius: 0.5vw;
+	-webkit-border-radius: 0.5vw;
+	        border-radius: 0.5vw;
 	height: 2.3vw;
 	cursor: pointer;
 	position: relative;
@@ -16,34 +17,49 @@
 }
 .courses{
 	width: 100%;
+	display: -ms-grid;
 	display: grid;
-	grid-template-columns: 33% 33% 33%;
+	-ms-grid-template-columns: 33% 33% 33%;
+	    grid-template-columns: 33% 33% 33%;
 	grid-gap: 2%;
 }
 .course{
 	background-color: #162034;
 	height: 20vw;
 	width: 98%;
-	border-radius: 0.5vw;
+	-webkit-border-radius: 0.5vw;
+	        border-radius: 0.5vw;
 	position: relative;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
-	box-shadow: 0 0 0vw white;
+	-webkit-box-shadow: 0 0 0vw white;
+	        box-shadow: 0 0 0vw white;
 	margin: 1vw 0;
 }
 .course:hover{
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
-	box-shadow: 0 0 1vw gray;
+	-webkit-box-shadow: 0 0 1vw gray;
+	        box-shadow: 0 0 1vw gray;
 	cursor: pointer;
 }
 .course:hover .c-title{
+ 	-webkit-transition: 1s;
+ 	-o-transition: 1s;
  	transition: 1s;
  	font-size: 1.4vw;
 }
 .course:hover .paid{
+ 	-webkit-transition: 1s;
+ 	-o-transition: 1s;
  	transition: 1s;
  	font-size: 1.2vw;
 }
 .course:hover .free{
+ 	-webkit-transition: 1s;
+ 	-o-transition: 1s;
  	transition: 1s;
  	font-size: 1.2vw;
 }
@@ -54,6 +70,8 @@
 	text-align: center;
 	font-size: 1.2vw;
 	padding: 2%;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
 	transition: 1s;
 	color: white;
 	font-weight: bold;
@@ -66,7 +84,10 @@
 	padding: 0.4vw;
 	font-size: 1.1vw;
 	color: white;
-	border-radius: 0 0.5vw 0 0.5vw;
+	-webkit-border-radius: 0 0.5vw 0 0.5vw;
+	        border-radius: 0 0.5vw 0 0.5vw;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
 	transition: 1s;
 }
 .free{
@@ -77,6 +98,9 @@
 	padding: 0.4vw;
 	font-size: 1.1vw;
 	color: white;
-	border-radius: 0 0.5vw 0 0.5vw;
+	-webkit-border-radius: 0 0.5vw 0 0.5vw;
+	        border-radius: 0 0.5vw 0 0.5vw;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
 	transition: 1s;	
 }
