--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,11 @@
 	width: 100%;
 	position: absolute;
 	height: 6.5vw;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	z-index: 999;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;	
 }
 .icon-burger:before{
@@ -14,6 +17,8 @@
 	top:-5px;
 	left: 0;
 	content: '';
+	-webkit-transition: 1s;
+	-o-transition: 1s;
 	transition: 1s;
 }
 .icon-burger{
@@ -23,6 +28,8 @@
 	height: 3px;
 	top:12px;
 	left: 4px;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
 	transition: 1s;
 }
 .icon-burger:after{
@@ -33,6 +40,8 @@
 	top:5px;
 	left: 0;
 	content: '';	
+	-webkit-transition: 1s;	
+	-o-transition: 1s;	
 	transition: 1s;
 }
 .relative{
@@ -47,8 +56,11 @@
 	width: 100%;
 	position: relative;
 	height: 6.5vw;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	z-index: 999;
+	-webkit-transition: 0.5s;
+	-o-transition: 0.5s;
 	transition: 0.5s;
 }
 .burger{
@@ -98,8 +110,14 @@
 .navbar{
 	width: 69%;
 	height: 100%;
+	display: -webkit-box;
+	display: -webkit-flex;
+	display: -ms-flexbox;
 	display: flex;
-	justify-content: center;
+	-webkit-box-pack: center;
+	-webkit-justify-content: center;
+	    -ms-flex-pack: center;
+	        justify-content: center;
 	margin:0;
 	padding: 0;
 }
@@ -166,7 +184,9 @@
 	position: absolute;
 	top:50%;
 	left:50%;
-	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	    -ms-transform: translate(-50%,-50%);
+	        transform: translate(-50%,-50%);
 	text-align: center;
 }
 .nav-link  span{
@@ -178,6 +198,8 @@
 .fixed{
 	position: fixed;
 	background-color: white;
+	-webkit-transition: 0,5s;
+	-o-transition: 0,5s;
 	transition: 0,5s;
 }
 
