--- a/css/make.css
+++ b/css/make.css
@@ -2,9 +2,12 @@
 	margin: auto;
 	width: 40vw;
 	background-color: #162034;
-	border-radius: 2vw;
+	-webkit-border-radius: 2vw;
+	        border-radius: 2vw;
 	padding: 1vw;
 	position: relative;
+	-webkit-transition:1s;
+	-o-transition:1s;
 	transition:1s;
 	min-height: 46vw;
 	height: auto;
@@ -21,9 +24,12 @@
 .make-filter{
 	margin: 1vw;
 	margin-top: 5vw;
+	display: -ms-grid;
 	display: grid;
-	grid-template-columns: 50% 50%;
-	grid-template-rows: auto;
+	-ms-grid-template-columns: 50% 50%;
+	    grid-template-columns: 50% 50%;
+	-ms-grid-template-rows: auto;
+	    grid-template-rows: auto;
 	height: 2vw;
 	border-bottom: 0.1vw solid silver;
 	width: 80%;
@@ -43,7 +49,8 @@
 	height: 2vw;
 	font-family: 'Montserrat Alternates', sans-serif;
 	font-size: 1vw;
-	border-radius: 1vw 1vw 0 0;
+	-webkit-border-radius: 1vw 1vw 0 0;
+	        border-radius: 1vw 1vw 0 0;
 	outline: none;
 	padding-left: 1vw;
 	border:0.1vw solid #007aff;
@@ -65,8 +72,10 @@
 
 }
 .photo-container{
+	display: -ms-grid;
 	display: grid;
-	grid-template-columns: 50% 50%;
+	-ms-grid-template-columns: 50% 50%;
+	    grid-template-columns: 50% 50%;
 	margin-bottom: 1vw;
 	width: 100%;
 	position: relative;
@@ -86,10 +95,15 @@
 	font-size: 4vw;
 	top:0%;
 	left: 50%;
-	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	    -ms-transform: translate(-50%,-50%);
+	        transform: translate(-50%,-50%);
 	text-align: center;
-	border-radius: 2vw;
+	-webkit-border-radius: 2vw;
+	        border-radius: 2vw;
 	cursor: pointer;
+	-webkit-transition: 1s;
+	-o-transition: 1s;
 	transition: 1s;
 
 }
@@ -106,17 +120,23 @@
 	position: absolute;
 	top:40%;
 	left: 35%;
-	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	    -ms-transform: translate(-50%,-50%);
+	        transform: translate(-50%,-50%);
 	color:#fff;
 	border: none;
 	
 }
 
 .plus{
-	transform:rotate(45deg) translate(-50%,-50%)!important;
+	-webkit-transform:rotate(45deg) translate(-50%,-50%)!important;
+	    -ms-transform:rotate(45deg) translate(-50%,-50%)!important;
+	        transform:rotate(45deg) translate(-50%,-50%)!important;
 	top:63% !important;
 	left: -3% !important;
 	color:red !important;
+	-webkit-transition: 0.5s !important;
+	-o-transition: 0.5s !important;
 	transition: 0.5s !important;
 }
 .inv{
@@ -129,7 +149,8 @@
 	height: 3vw;
 	background-color: #007aff;
 	color:#fff;
-	border-radius: 2vw;
+	-webkit-border-radius: 2vw;
+	        border-radius: 2vw;
 	cursor: pointer;
 }
 .make-button:hover{
@@ -144,7 +165,9 @@
 	position: absolute;
 	top:50%;
 	left: 50%;
-	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	    -ms-transform: translate(-50%,-50%);
+	        transform: translate(-50%,-50%);
 }
 .i-note{
 	position: absolute;
