--- a/css/search.css
+++ b/css/search.css
@@ -1,7 +1,8 @@
 .search-nav{
 	width: 100%;
 	height: 4vw;
-	box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	        box-sizing: border-box;
 	background-color: #395ABD;
 	position: relative;
 }
@@ -9,7 +10,8 @@
 	width: 15%;
 	height: 3%;
 	font-size:1.5vw;
-	border-radius: 1vw; 
+	-webkit-border-radius: 1vw;
+	        border-radius: 1vw; 
 	padding: 0.4vw;
 	float: left;
 	margin-left: 40%;
@@ -29,7 +31,9 @@
 	font-size: 2vw;
 	left:20%;
 	top: 50%;
-	transform: translateY(-50%);
+	-webkit-transform: translateY(-50%);
+	    -ms-transform: translateY(-50%);
+	        transform: translateY(-50%);
 }
 .search-button{
 	width: 11%;
@@ -40,12 +44,17 @@
 	left:57%;
 	padding: 0.4vw;
 	border: 0.1vw solid white;
-	border-radius: 1vw;
+	-webkit-border-radius: 1vw;
+	        border-radius: 1vw;
 	font-weight: bold;
 	top: 50%;
-		transform: translateY(-50%);
+		-webkit-transform: translateY(-50%);
+		    -ms-transform: translateY(-50%);
+		        transform: translateY(-50%);
 		text-align: center;
 		cursor: pointer;
+		-webkit-transition: 0.3s;
+		-o-transition: 0.3s;
 		transition: 0.3s;
 		font-size: 1.1vw;
 }
@@ -53,11 +62,15 @@
 	position: absolute;
 	top:50%;
 	left: 50%;
-	transform: translate(-50%,-50%);
+	-webkit-transform: translate(-50%,-50%);
+	    -ms-transform: translate(-50%,-50%);
+	        transform: translate(-50%,-50%);
 
 }
 .search-button:hover{
 	background-color: #fff;
 	color:#007AFF;
+	-webkit-transition: 0.3s;
+	-o-transition: 0.3s;
 	transition: 0.3s;
 }
