--- a/css/media.css
+++ b/css/media.css
@@ -495,6 +495,9 @@
 		height: 30px;
 		font-size: 13px;
 	}
+	.make-button span{
+		font-size: 20px;
+	}
 	.inp{
 		height: 30px;
 	}
@@ -568,8 +571,13 @@
 		font-size: 15px;
 	}
 	/*--------test.php--------------------------------*/
+	#nm{
+		margin-left:0;
+		margin-top: 60px;
+		margin-right: 0;
+	}
 	.test{
-		width: 100%;
+		width: 125%;
 		height: 100%;
 		padding: 5% 0;
 		margin: 0;
@@ -577,10 +585,12 @@
 	}
 	.test-list{
 		list-style: none;
+		padding-left: 0;
 	}
 	.answer{
 		margin: 5%;
 		font-size: 23px;
+		word-break: break-all;	
 	}
 	.question{
 		font-size: 23px;
@@ -592,19 +602,30 @@
 		margin: 1vw 0;
 		width: 90%;
 		height: 90%;
-		-ms-grid-template-columns: 1fr;
-		    grid-template-columns: 1fr;
+		-ms-grid-template-columns: 110%;
+		    grid-template-columns: 110%;
 	}
 	.t-pic{
-		width: 300px;
+		width: 320px;
 		height: 300px;
 		background-color: gray;
 	}
-	.t-submit{
+	.t-button{
 		font-size: 20px;
 		width: 200px!important;
-		height: 50px;
+		height: 30px;
 		margin-right: 20%;
+	}
+	.t-results{
+		font-size: 20px;
+		margin-top: 0;	
+		margin-left: 10px;
+	}
+	.t-title{
+		font-size: 25px;
+	}
+	.mt{
+		margin-top: 50px;
 	}
 	/*--------auth.php--------------------------------*/
 	.loginform{
