--- a/css/edu.css
+++ b/css/edu.css
@@ -36,6 +36,7 @@
 	-webkit-box-shadow: 0 0 0vw white;
 	        box-shadow: 0 0 0vw white;
 	margin: 1vw 0;
+	padding:1%;
 }
 .course:hover{
 	-webkit-transition: 0.5s;
@@ -75,6 +76,7 @@
 	transition: 1s;
 	color: white;
 	font-weight: bold;
+	z-index: 9;
 }
 .paid{
 	position: absolute;
@@ -104,3 +106,16 @@
 	-o-transition: 1s;
 	transition: 1s;	
 }
+.lesson-image{
+	width: 70%;
+	height: 70%;
+	margin-left:15%;
+	margin-top: 13%;
+	opacity: 0.1;
+
+}
+.lesson-pic{
+	width: 100%;
+	height: 100%;
+}
+
