--- a/css/media.css
+++ b/css/media.css
@@ -56,6 +56,8 @@
 		font-size: 30px;
 		margin-top:3px;
 	}
+	#scm{
+	}
 	#check:checked ~ .header{
 		-webkit-transform: translateY(450px);
 		    -ms-transform: translateY(450px);
@@ -77,6 +79,7 @@
 	#check:checked ~  .burger .icon-burger:after{
 		top:2px;
 		left: 1px;
+		border-bottom: 2px solid black!important;
 		-webkit-transition: 1s;
 		-o-transition: 1s;
 		transition: 1s;
@@ -87,6 +90,7 @@
 	#check:checked ~  .burger .icon-burger{
 		top:11px;
 		left: 5px;
+		border-bottom: 2px solid black!important;
 		-webkit-transform: rotateZ(45deg);
 		    -ms-transform: rotate(45deg);
 		        transform: rotateZ(45deg);
@@ -96,6 +100,20 @@
 	}
 	#check:checked ~ .logo-title{
 		color: #007aff!important;
+	}
+	#check:checked ~ .burger{
+		background-color: #fff;
+		
+		-webkit-transition: 1s;
+		-o-transition: 1s;
+		transition: 1s;
+
+	}
+	#check:checked ~ .icon-burger{
+		border-bottom: 2px solid black!important;
+		-webkit-transition: 1s;
+		-o-transition: 1s;
+		transition: 1s;
 	}
 	.logo{
 		float: none;
@@ -146,7 +164,7 @@
 		border-bottom:  1px solid gray;	
 	}
 	.card-title{
-		font-size: 30px;
+		font-size: 23px;
 		border-bottom:  1px solid gray;	
 	}
 	.card-content{
@@ -171,6 +189,9 @@
 		width: 20%;
 		height: 30%;
 		left: 70%;
+	}
+	.search-label{
+		font-size: 7px;
 	}
 	.footer{
 		height: 80%;
@@ -288,6 +309,9 @@
 	.as-info span{
 		font-size: 30px!important;
 	}
+	.as-info div{
+		font-size: 15px!important;
+	}
 	.as-services{
 		min-height: 300px;
 	}
@@ -306,6 +330,12 @@
 		top:7%;
 		left:30%;
 	}
+	.comment span{
+		font-size:14px;
+	}
+	.com-text{
+		font-size:18px;
+	}
 	.minis{
 		font-size: 10px;
 
@@ -319,14 +349,14 @@
 		left:20%;
 	}
 	.feedback{
-		width:190px;
+		width:260px;
 		height:100px;
 		font-size: 13px;
 		top:16%;
 		left: 20%;
 		overflow-x: hidden;
 		word-wrap: break-word;
-		max-width: 200px;
+		max-width: 260px;
 		white-space: normal;
 	}
 	.send-feed{
@@ -459,8 +489,9 @@
 	}
 	.podrobno-info div{
 		font-size: 16px;
-		margin-top: 10px;
+		white-space: normal;
 	}
+
 	.add{
 		width: 110%!important;
 	}
